// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interpreter/functions#tagcloud returns an object with the correct structure for number accessors 1`] = `
Object {
  "as": "tagloud_vis",
  "type": "render",
  "value": Object {
    "syncColors": false,
    "visData": Object {
      "columns": Array [
        Object {
          "id": "Count",
          "name": "Count",
        },
        Object {
          "id": "country",
          "name": "country",
        },
      ],
      "rows": Array [
        Object {
          "Count": 0,
          "country": "US",
        },
        Object {
          "Count": 10,
          "country": "UK",
        },
      ],
      "type": "datatable",
    },
    "visParams": Object {
      "bucket": Object {
        "accessor": 1,
      },
      "maxFontSize": 72,
      "metric": Object {
        "accessor": 0,
      },
      "minFontSize": 18,
      "orientation": "single",
      "palette": Object {
        "name": "default",
        "type": "palette",
      },
      "scale": "linear",
      "showLabel": true,
    },
    "visType": "tagcloud",
  },
}
`;

exports[`interpreter/functions#tagcloud returns an object with the correct structure for string accessors 1`] = `
Object {
  "as": "tagloud_vis",
  "type": "render",
  "value": Object {
    "syncColors": false,
    "visData": Object {
      "columns": Array [
        Object {
          "id": "Count",
          "name": "Count",
        },
        Object {
          "id": "country",
          "name": "country",
        },
      ],
      "rows": Array [
        Object {
          "Count": 0,
          "country": "US",
        },
        Object {
          "Count": 10,
          "country": "UK",
        },
      ],
      "type": "datatable",
    },
    "visParams": Object {
      "bucket": Object {
        "accessor": Object {
          "id": "country",
          "meta": Object {
            "type": "string",
          },
          "name": "country",
        },
        "format": Object {
          "params": Object {},
        },
        "type": "vis_dimension",
      },
      "maxFontSize": 72,
      "metric": Object {
        "accessor": Object {
          "id": "Count",
          "meta": Object {
            "type": "number",
          },
          "name": "Count",
        },
        "format": Object {
          "params": Object {},
        },
        "type": "vis_dimension",
      },
      "minFontSize": 18,
      "orientation": "single",
      "palette": Object {
        "name": "default",
        "type": "palette",
      },
      "scale": "linear",
      "showLabel": true,
    },
    "visType": "tagcloud",
  },
}
`;
